# routers/files.js
@@ -9,7 +9,8 @@ const admin = require('../middleware/admin')
 const mongoose = require("mongoose")
 const Grid = require('gridfs-stream')
 const newtoken = require('../middleware/newtoken')
-const { UserProfileInfo, validate } = require('../models/user_profile_info')
+const { User } = require('../models/user')
+const { MessageGroup } = require('../models/message_group')
 
 let gfs
 const conn = mongoose.connection
@@ -38,6 +39,34 @@ router.post('/uploadfile', [auth, admin, upload_file.single('file'), newtoken], 
     
 })
 
+router.post('/uploadfilemessage', [auth, admin, upload_file.single('file'), newtoken], async (req, res) => {
+
+    if(req.file === undefined) return res.send("file tanlang")
+    
+    const imageUrl = `http://localhost:8080/v1/file/${req.file.filename}`
+
+    const { to_message } = req.body
+
+    if(!to_message){
+        return res.status(404).send("Guruh yoki shaxs tanlanmagan")
+    } else {
+        const context_message = imageUrl
+        const from_message = req.user._id
+        const type_message = 'file'
+
+        let group_message = new MessageGroup({
+            context_message,
+            from_message,
+            type_message,
+            to_message
+        });
+
+        let newgroup_message = await group_message.save();
+        return res.send(newgroup_message)
+    }
+    
+})
+
 router.post('/uploadaudio', upload_audio.single('file'), async (req, res) => {
 
     console.log(req.file)
@@ -60,6 +89,34 @@ router.post('/uploadvideo', [auth, admin, upload_video.single('file'), newtoken]
     
 })
 
+router.post('/uploadvideomessage', [auth, admin, upload_video.single('file'), newtoken], async (req, res) => {
+
+    if(req.file === undefined) return res.send("file tanlang")
+    
+    const imageUrl = `http://localhost:8080/v1/file/${req.file.filename}`
+
+    const { to_message } = req.body
+
+    if(!to_message){
+        return res.status(404).send("Guruh yoki shaxs tanlanmagan")
+    } else {
+        const context_message = imageUrl
+        const from_message = req.user._id
+        const type_message = 'video'
+
+        let group_message = new MessageGroup({
+            context_message,
+            from_message,
+            type_message,
+            to_message
+        });
+
+        let newgroup_message = await group_message.save();
+        return res.send(newgroup_message)
+    }
+    
+})
+
 router.post('/uploadimg', [auth, upload.single('file'), newtoken], async (req, res) => {
 
     if(req.file === undefined) return res.send("file tanlang")
@@ -68,28 +125,37 @@ router.post('/uploadimg', [auth, upload.single('file'), newtoken], async (req, r
 
     const user_id = req.user._id
 
-    const { error } = validate({
-        user_id,
-        image_url: imageUrl
-    });
-    if(error)
-        return res.status(400).send(error.details[0].message);
-
-    let profileInfo = await UserProfileInfo.findOne({ user_id: user_id });
-    if (profileInfo){
-        await UserProfileInfo.findByIdAndUpdate(profileInfo._id, {
-            user_id,
-            image_url: imageUrl
-        });
-    } else {
-        const newProfileInfo = new UserProfileInfo({
-            user_id,
-            image_url: imageUrl
-        });
-        await newProfileInfo.save();
-    }
+    await User.findOneAndUpdate({_id: user_id}, { $set: {profile_img: imageUrl} })
 
     return res.send(imageUrl)
+    
+})
+
+router.post('/uploadimgmessage', [auth, upload.single('file'), newtoken], async (req, res) => {
+
+    if(req.file === undefined) return res.send("file tanlang")
+    
+    const imageUrl = `http://localhost:8080/v1/file/${req.file.filename}`
+
+    const { to_message } = req.body
+
+    if(!to_message){
+        return res.status(404).send("Guruh yoki shaxs tanlanmagan")
+    } else {
+        const context_message = imageUrl
+        const from_message = req.user._id
+        const type_message = 'image'
+
+        let group_message = new MessageGroup({
+            context_message,
+            from_message,
+            type_message,
+            to_message
+        });
+
+        let newgroup_message = await group_message.save();
+        return res.send(newgroup_message)
+    }
     
 })
 
